src/test/deca/syntax/invalid/resultats/test20_instr_bool-synt.res
./src/test/deca/syntax/invalid/test20_instr_bool.deca:15:19: no viable alternative at input '!'
